<resources>
    <string name="app_name">MeetIn</string>
    <string name="raised_money">Собрано: %1$s</string>
    <string name="raised_money_and_total">"Собрано: %1$s\nиз %2$s"</string>
    <string name="funding_percent">%1$d %%</string>

    <plurals name="days_left">
        <item quantity="one">>%d день остался</item>
        <item quantity="few">%d дня осталось</item>
        <item quantity="many">%d дней осталось</item>
        <item quantity="other">%d дней осталось</item>
    </plurals>

    <plurals name="categories">
        <item quantity="one"><b>Категория:</b> %s</item>
        <item quantity="other"><b>Категории:</b> %s</item>
    </plurals>

    <plurals name="reward_taken_times">
        <item quantity="one">%1$d раз из %2$d возможных</item>
        <item quantity="few">%1$d раза из %2$d возможных</item>
        <item quantity="many">%1$d раз из %2$d возможных</item>
        <item quantity="other">%1$d раз из %2$d возможных</item>
    </plurals>

    <string name="comments">Комментарии</string>
    <string name="video">Видео</string>
    <string name="updates">Обновления</string>
    <string name="reward">Награда за взнос:</string>
    <string name="delivery_date">Время доставки:</string>
    <string name="shipment">Доставка:</string>
    <string name="service_not_available">Сервис недоступен</string>
    <string name="invalid_lat_long_used">Неверно задана локация</string>
    <string name="no_address_found">Адрес не найден</string>
    <string name="address_found">Адрес найден</string>
    <string name="reward_sum">Взнос в размере %1$s или больше</string>
    <string name="reward_chosen">Взнос сделан:</string>
    <string name="dash">-</string>
    <string name="name_and_surname">%1$s %2$s</string>
    <string name="nav_new_project">Создать проект</string>
    <string name="nav_my_projects">Мои проекты</string>
    <string name="nav_notifications">Оповещения</string>
    <string name="nav_follow">Отслеживаются</string>
    <string name="nav_saved_projects">Сохраненные проекты</string>
    <string name="nav_categories">Категории</string>
    <string name="nav_filters">Фильтры</string>
    <string name="nav_login">Вход/Регистрация</string>

    <string name="nav_category_1">Бизнес</string>
    <string name="nav_category_2">Еда</string>
    <string name="nav_category_3">Искусство</string>
    <string name="nav_category_4">Образование</string>
    <string name="nav_category_5">Развлечения</string>
    <string name="nav_category_6">Спорт</string>
    <string name="nav_category_7">Экскурсии</string>
    <string name="nav_category_8">Другое</string>

    <string name="most_popular">Популярные</string>
    <string name="successful">Успешные</string>
    <string name="newest">Новые</string>
    <string name="most_funded">С наибольшими взносами</string>
    <string name="most_followed">Наиболее понравившиеся</string>
    <string name="end_date">Укажите дату завершения</string>
    <string name="popular_summary">Проекты, за которыми следит наибольшее количество полльзователей</string>
    <string name="success_summary">Проекты, которые набрали итоговую сумму</string>
    <string name="funded_summary">Проекты с максимальными взносами</string>
    <string name="end_filter_on">Выключить фильтр по дате завершения</string>
    <string name="end_filter_off">Включить фильтр по дате завершения</string>
    <string name="additional_filters">Дополнительно</string>
    <string name="location_filter_off">Включить фильтр по местоположению</string>
    <string name="location_filter_on">Включить фильтр по местоположению</string>
    <string name="location_filter_hint">Выбрать место</string>
    <string name="first_to_show">Первыми вывести:</string>
    <string name="date_hint">дд.мм.гггг</string>


    <string-array name="sorting_style">
        <item>@string/newest</item>
        <item>@string/most_popular</item>
        <item>@string/most_funded</item>
    </string-array>
    <string name="title_activity_maps">Местоположение</string>
</resources>
