<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/sorting_type">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="isPopularFilterOn"
        android:summary="@string/popular_summary"
        android:title="@string/most_popular"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="isSuccessFilterOn"
        android:summary="@string/success_summary"
        android:title="@string/successful"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="isNewestFilterOn"
        android:title="@string/newest"/>
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="isFundedFilterOn"
        android:summary="@string/funded_summary"
        android:title="@string/most_funded"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/additional_filters">
    <SwitchPreference
        android:key="endDateFilterEnable"
        android:summaryOff="@string/end_filter_off"
        android:summaryOn="@string/end_filter_on" />

    <com.shera.android.meetin.DatePreference
        android:key="endDateFilter"
        android:title="@string/end_date" />
    </PreferenceCategory>

</PreferenceScreen>