<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_project"
            android:icon="@drawable/ic_library_add_white_24px"
            android:title="@string/nav_new_project" />
        <item
            android:id="@+id/nav_my_projects"
            android:icon="@drawable/ic_library_books_white_18px"
            android:title="@string/nav_my_projects" />
        <item
            android:id="@+id/nav_saved_projects"
            android:icon="@drawable/ic_star_rate_white_18px"
            android:title="@string/nav_saved_projects" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_baseline_notifications_24px"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_follow"
            android:icon="@drawable/ic_baseline_people_24px"
            android:title="@string/nav_follow" />
        <item
            android:id="@+id/nav_filters"
            android:icon="@drawable/ic_assignment_white_18px"
            android:title="@string/nav_filters" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_library_add_white_24px"
            android:title="@string/nav_categories" >

        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/navigation_sub_item_1"
                android:icon="@drawable/ic_library_add_white_24px"
                android:title="@string/nav_category_1"/>
            <item
                android:id="@+id/navigation_sub_item_2"
                android:icon="@drawable/ic_library_add_white_24px"
                android:title="@string/nav_category_2"/>
            <item
                android:id="@+id/navigation_sub_item_3"
                android:icon="@drawable/ic_library_add_white_24px"
                android:title="@string/nav_category_3"/>
            <item
                android:id="@+id/navigation_sub_item_4"
                android:icon="@drawable/ic_library_add_white_24px"
                android:title="@string/nav_category_4"/>
            <item
                android:id="@+id/navigation_sub_item_5"
                android:icon="@drawable/ic_library_add_white_24px"
                android:title="@string/nav_category_5"/>
            <item
                android:id="@+id/navigation_sub_item_6"
                android:icon="@drawable/ic_library_add_white_24px"
                android:title="@string/nav_category_6"/>
            <item
                android:id="@+id/navigation_sub_item_7"
                android:icon="@drawable/ic_library_add_white_24px"
                android:title="@string/nav_category_7"/>
            <item
                android:id="@+id/navigation_sub_item_8"
                android:icon="@drawable/ic_library_add_white_24px"
                android:title="@string/nav_category_8"/>

            </group>
        </menu>
        </item>
    </group>
</menu>