<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_playlist_play_white_18px"
            android:title="@string/nav_login" />
        <item
            android:id="@+id/nav_filters"
            android:icon="@drawable/ic_assignment_white_18px"
            android:title="@string/nav_filters" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_library_add_white_24px"
            android:title="@string/nav_categories" >

            <menu>
                <item
                    android:id="@+id/navigation_sub_item_1"
                    android:icon="@drawable/ic_library_add_white_24px"
                    android:title="1"/>
                <item
                    android:id="@+id/navigation_sub_item_2"
                    android:icon="@drawable/ic_library_add_white_24px"
                    android:title="2"/>
                <item
                    android:id="@+id/navigation_sub_item_3"
                    android:icon="@drawable/ic_library_add_white_24px"
                    android:title="3"/>
                <item
                    android:id="@+id/navigation_sub_item_4"
                    android:icon="@drawable/ic_library_add_white_24px"
                    android:title="4"/>
                <item
                    android:id="@+id/navigation_sub_item_5"
                    android:icon="@drawable/ic_library_add_white_24px"
                    android:title="5"/>
                <item
                    android:id="@+id/navigation_sub_item_6"
                    android:icon="@drawable/ic_library_add_white_24px"
                    android:title="6"/>
                <item
                    android:id="@+id/navigation_sub_item_7"
                    android:icon="@drawable/ic_library_add_white_24px"
                    android:title="7"/>
                <item
                    android:id="@+id/navigation_sub_item_8"
                    android:icon="@drawable/ic_library_add_white_24px"
                    android:title="8"/>
                <item
                    android:id="@+id/navigation_sub_item_9"
                    android:icon="@drawable/ic_library_add_white_24px"
                    android:title="9"/>
                <item
                    android:id="@+id/navigation_sub_item_10"
                    android:icon="@drawable/ic_library_add_white_24px"
                    android:title="10"/>
            </menu>
        </item>
    </group>
</menu>